# setjtime_project

./: LICENSE  README.md  pyproject.toml
src/setjtime/: __init__.py  setjtime.py
