[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setjtime"
version = "1.2.1"
authors = [
    { name="Juan Jose Solorzano", email="juanjose.solorzano.c@gmail.com" }
]
description = "A tool to log time to JIRA issues directly from the terminal."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

# Right side: package_folder.module_file:function_name
[project.scripts]
setjtime = "setjtime.setjtime:run"  # Creates the global 'setjtime' terminal command!

# Tells hatchling explicitly to look for your renamed directory inside src/
[tool.hatch.build.targets.wheel]
packages = ["src/setjtime"]
